Week 7.2: Resilient microservices patterns (Circuit Breaker pattern)

--- a/api-gateway-and-resilient-microservices-patterns/product-service/src/main/resources/application.properties
+++ b/api-gateway-and-resilient-microservices-patterns/product-service/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.application.name=product-service
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
-############  circuitbreaker configeration ############
+############  circuitbreaker configuration ############
 # To reguister the Health Indicator to be able to see the diffrent states of the circuitbreaker (CLOSED, OPEN and HALF_OPEN)
 resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
 # The emitted circuitbreaker events are stored in a circular consumer event buffer, and the size of this buffer  can be configured as follows
